src/objects/Payment_Gateway_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Biller_Group_ID__c</fullName>
        <label>Biller Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biller_ID__c</fullName>
        <label>Biller ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Gateway Setting</label>
    <pluralLabel>Payment Gateway Settings</pluralLabel>
</CustomObject>